compiler/testData/compileKotlinAgainstCustomBinaries/computeSupertypeWithMissingDependency/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/computeSupertypeWithMissingDependency/source.kt:7:11: error: cannot access class 'a.A'. Check your module classpath for missing or conflicting dependencies.
        b.foo()
          ^^^
compiler/testData/compileKotlinAgainstCustomBinaries/computeSupertypeWithMissingDependency/source.kt:9:11: error: cannot access class 'a.A'. Check your module classpath for missing or conflicting dependencies.
        b.bar()
          ^^^
COMPILATION_ERROR
